<resources>
    <string name="app_name">CMPE277_assgn1_1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_a">ActivityA</string>
    <string name="title_activity_b">ActivityB</string>
    <string name="thread_counter">Thread Counter:</string>
    <string name="activity_a">Activity A</string>
    <string name="dialog">Dialog</string>
    <string name="close_app">Close App</string>
    <string name="start_activityb">Start ActivityB</string>
    <string name="simple_dialog">Simple Dialog</string>
    <string name="cancel">Cancel</string>

</resources>
