<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_a"
        tools:context="edu.sjsu.xuy87.cmpe277_assgn1_1.ActivityA" tools:layout_editor_absoluteY="81dp"
        tools:layout_editor_absoluteX="0dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thread_counter"
            android:id="@+id/counterText" android:textSize="18sp"
            android:textAlignment="center" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <Button
            android:text="@string/close_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/closeApp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp" app:layout_constraintHorizontal_bias="0.502"/>
    <Button
            android:text="@string/start_activityb"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/startActivityB"

            tools:ignore="RtlHardcoded"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="@+id/title_ActivityA"
            android:layout_marginTop="32dp"/>
    <Button
            android:text="@string/dialog"
            android:layout_width="150dp"
            android:layout_height="wrap_content" android:id="@+id/dialogButton"
            tools:ignore="RtlHardcoded"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/startActivityB"/>

    <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:id="@+id/horizontal_line"
            tools:ignore="RtlHardcoded"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toTopOf="@+id/closeApp"/>

    <TextView
            android:text="@string/activity_a"
            android:layout_width="96dp"
            android:layout_height="19dp" android:id="@+id/title_ActivityA"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:textSize="18sp" android:textAlignment="center"/>

</android.support.constraint.ConstraintLayout>
